gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/match_func_ptr.d
version https://git-lfs.github.com/spec/v1
oid sha256:da0a106c338209e3e1469b55629ff98758ed405200d465a348928a2ddd8d6a29
size 622
